# qt-apps-boot2qt-launcher

./: .gitignore  CMakeLists.txt  README  fonts.qrc  icons.qrc  images.qrc  main.cpp  qml.qrc  qt_run.sh  resources.qrc  startup.pro
QtLauncher/: ApplicationIcon.qml  Background.qml  BootScreen.qml  BusyIndicator.qml  CMakeLists.txt  CornerFrameImage.qml  DemoHeader.qml  DemoInfoPopup.qml  DemoSurface.qml  DetailView.qml  DetailViewIcon.qml  FlickSlider.qml  GridViewIcon.qml  Header.qml  Keyboard.qml  LaunchScreen.qml  LauncherCompositor.qml  Main.qml  MainWindow.qml  SettingsButton.qml  ViewSettings.qml  applicationsmodel.cpp  applicationsmodel.h  applicationsmodel_p.h  circularindicator.cpp  circularindicator.h  engine.cpp  engine.h  settingsmanager.cpp  settingsmanager.h
QtLauncher/QtImageProviders/: CMakeLists.txt  imageproviders.cpp  imageproviders.h  plugin.cpp
open-sans/: fonts.pri
qml/: AboutQt.qml  ApplicationIcon.qml  AutoScroller.qml  Background.qml  BootScreen.qml  BusyIndicator.qml  Button.qml  CheckBox.qml  DemoClosePopup.qml  DemoHeader.qml  DemoInfoPopup.qml  DemoMode.qml  DetailView.qml  DetailViewIcon.qml  DeviceSettings.qml  FlickSlider.qml  FpsIndicator.qml  GlimmeringQtLogo.qml  GlobalIndicator.qml  GridViewIcon.qml  GridViewWithInertia.qml  HandwritingModeButton.qml  Header.qml  HighlightShader.qml  ImageTextDelegate.qml  KeyboardLoader.qml  LaunchScreen.qml  LauncherCheckBox.qml  LayoutSettings.qml  Main.qml  MainWindow.qml  SettingsScreen.qml  Slider.qml  TitleBar.qml  ViewSettings.qml  main_desktop.qml  main_landscape.qml  main_nexus7.qml  settings.xml
qml/bootscreen/: BootScreen.qml
qml/common/: GridViewWithInertia.qml
qml/launchscreen/: ApplicationIcon.qml  LaunchScreen.qml  TitleBar.qml
screenshot/: Button.qml  Main.qml
screenshot/plugin/: plugin.cpp  qmldir  screenshot.pro
src/: applicationsettings.cpp  applicationsettings.h  applicationsmodel.cpp  applicationsmodel.h  applicationsmodel_p.h  automationhelper.cpp  automationhelper.h  circularindicator.cpp  circularindicator.h  engine.cpp  engine.h  fpscounter.cpp  fpscounter.h  imageproviders.cpp  imageproviders.h  logmanager.cpp  logmanager.h  main.cpp  settingsmanager.cpp  settingsmanager.h
test/dummyapps/About/: AboutBoot2Qt.qml  Box.qml  ContentText.qml  QtForAndroid.qml  QtFramework.qml  Title.qml  main.qml
test/dummyapps/Basic Application/: main.qml
test/dummyapps/Calendar/: main.qml
test/dummyapps/Camera/: main.qml
test/dummyapps/Clock/: main.qml
test/dummyapps/Iconless Application/: main.qml
test/dummyapps/Music/: main.qml
test/dummyapps/Photo Gallery/: main.qml
